--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
+    <link href="js/sliderjs/slider.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="instagram">Instawed</div>
@@ -31,15 +33,30 @@
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="js/sliderjs/slider.min.js"></script>
 <script>
     (function ($) {
+        var slider = new Slider($('.photo'));
+        slider.setSize(306, 306)
+                .setTheme('no-control')
+                .setTransitionFunction(SliderTransitionFunctions.squares);
+
         //var socket = io.connect('http://localhost:8080');
         var socket = io.connect('http://instawed.jit.su/');
         socket.on('photo', function (raw) {
-            console.log(raw);
-            var obj = JSON.parse(raw)[0];
-            var photo = obj.images.low_resolution.url;
-            $('.photo').prepend('<img src="' + photo + '">&nbsp;');
+            var medias = JSON.parse(raw);
+            var photos = [];
+
+            $.map(medias, function (media, i) {
+                photos.push({
+                                "link":media.link,
+                                "src" :media.images.low_resolution.url,
+                                "name":media.user.full_name
+                            });
+            });
+
+            console.log('updated...');
+            slider.setPhotos(photos);
         });
     })(jQuery);
 
