--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,8 @@
 <div class="instagram">Instawed</div>
 <div class="photo"></div>
 </body>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="js/sliderjs/slider.min.js"></script>
 <script>
     (function ($) {
@@ -44,6 +44,7 @@
         //var socket = io.connect('http://localhost:8080');
         var socket = io.connect('http://instawed.jit.su/');
         socket.on('photo', function (raw) {
+            console.log(raw);
             var medias = JSON.parse(raw);
             var photos = [];
 
