--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Instawed</title>
+    <title>mementogram</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,9 +28,18 @@
     <link href="js/sliderjs/slider.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<div class="instagram">Instawed</div>
-<div class="photo"></div>
-</body>
+<header>
+
+</header>
+
+<div role="main">
+    <div class="photo"></div>
+</div>
+
+<footer>
+
+</footer>
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script src="js/sliderjs/slider.min.js"></script>
@@ -60,6 +69,6 @@
             slider.setPhotos(photos);
         });
     })(jQuery);
-
 </script>
+</body>
 </html>
