--- a/public/index.html
+++ b/public/index.html
@@ -26,42 +26,72 @@
     <![endif]-->
 
     <link href="js/sliderjs/slider.min.css" rel="stylesheet" type="text/css"/>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-<header>
 
-</header>
+<div class="root">
+    <header>
 
-<div role="main">
-    <div class="photo"></div>
+    </header>
+
+    <div role="main">
+        <div class="media-inner">
+            <div class="media-photos"></div>
+            <div class="media-info">
+                <section class="media-user">
+                    <h2></h2>
+                    <span class="img img-inset user-avatar"></span>
+                </section>
+                <section class="media-likes">
+                    <h2><span class="like-count"></span></h2>
+                    <span class="img img-inset heart"></span>
+                </section>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="wrapper">
+            <p class="copyright">© 2012 primetwentythree</p>
+        </div>
+    </footer>
 </div>
-
-<footer>
-
-</footer>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="js/sliderjs/slider.min.js"></script>
+<script src="js/sliderjs/slider.js"></script>
 <script>
     (function ($) {
-        var slider = new Slider($('.photo'));
+        var slider = new Slider($('.media-photos'));
         slider.setSize(612, 612)
-                .setTheme('no-control')
+                .setTheme('memento')
+                .setDuration(5000)
+                .setTransitionDuration(1000)
                 .setTransitionFunction(SliderTransitionFunctions.squares);
 
-        //var socket = io.connect('http://localhost:8080');
+        // listen to changed...
+        var onChanged = function (e, node) {
+            var data = node.data();
+            $('.media-user h2').html(data.fullname);
+            $('.media-user .user-avatar').css('background-image', 'url(' + data.profilepicture + ')');
+            $('.media-likes .like-count').html(data.likecount);
+        };
+        $('.media-photos').on('changed', onChanged);
+
         var socket = io.connect('http://instawed.jit.su/');
         socket.on('photo', function (raw) {
-            console.log(raw);
             var medias = JSON.parse(raw);
             var photos = [];
 
-            $.map(medias, function (media, i) {
+            $.map(medias, function (media) {
                 photos.push({
-                                "link":media.link,
-                                "src" :media.images.standard_resolution.url,
-                                "name":media.user.full_name
+                                "link"          :media.link,
+                                "src"           :media.images.standard_resolution.url,
+                                "username"      :media.user.username,
+                                "fullname"      :media.user.full_name,
+                                "profilepicture":media.user.profile_picture,
+                                "likecount"     :media.likes.count
                             });
             });
 
