--- a/public/index-static.html
+++ b/public/index-static.html
@@ -25,6 +25,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link href='http://fonts.googleapis.com/css?family=Rouge+Script|Cabin+Condensed:400,700' rel='stylesheet' type='text/css'>
     <link href="js/sliderjs/slider.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -32,7 +33,7 @@
 
 <div class="root">
     <header>
-
+        <div class="wrapper"><h1 class="logo">Mementogr.am</h1></div>
     </header>
 
     <div class="main">
@@ -218,8 +219,8 @@
                     <span class="img img-inset user-avatar" style="background-image: url(http://images.instagram.com/profiles/profile_14157_75sq_1286730735.jpg);"></span>
                 </section>
                 <section class="media-likes">
-                    <h2><span class="like-count">100</span></h2>
-                    <span class="img img-inset heart"></span>
+                    <h2><span class="like-count">10000</span></h2>
+                    <span class="img heart"></span>
                 </section>
             </div>
         </div>
