--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link href='http://fonts.googleapis.com/css?family=Rouge+Script|Cabin+Condensed:400,700' rel='stylesheet' type='text/css'>
     <link href="js/sliderjs/slider.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -32,7 +33,7 @@
 
 <div class="root">
     <header>
-
+        <div class="wrapper"><h1 class="logo">Mementogr.am</h1></div>
     </header>
 
     <div role="main">
@@ -45,7 +46,7 @@
                 </section>
                 <section class="media-likes">
                     <h2><span class="like-count"></span></h2>
-                    <span class="img img-inset heart"></span>
+                    <span class="img heart"></span>
                 </section>
             </div>
         </div>
@@ -60,9 +61,11 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="js/jquery.imagesloaded.min.js"></script>
 <script src="js/sliderjs/slider.js"></script>
 <script>
     (function ($) {
+        // setup slider
         var slider = new Slider($('.media-photos'));
         slider.setSize(612, 612)
                 .setTheme('memento')
@@ -79,10 +82,12 @@
         };
         $('.media-photos').on('changed', onChanged);
 
-        var socket = io.connect('http://instawed.jit.su/');
+        // listen to instagram subs
+        var socket = io.connect();
         socket.on('photo', function (raw) {
             var medias = JSON.parse(raw);
             var photos = [];
+            console.log(medias);
 
             $.map(medias, function (media) {
                 photos.push({
@@ -97,6 +102,10 @@
 
             console.log('updated...');
             slider.setPhotos(photos);
+        });
+
+        socket.on('connect', function (raw) {
+            console.log('connected to server');
         });
     })(jQuery);
 </script>
