--- a/public/index-static.html
+++ b/public/index-static.html
@@ -25,7 +25,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link href='http://fonts.googleapis.com/css?family=Rouge+Script|Cabin+Condensed:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:400,700|Great+Vibes' rel='stylesheet' type='text/css'>
     <link href="js/sliderjs/slider.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
