--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link href='http://fonts.googleapis.com/css?family=Rouge+Script|Cabin+Condensed:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:400,700|Great+Vibes' rel='stylesheet' type='text/css'>
     <link href="js/sliderjs/slider.min.css" rel="stylesheet" type="text/css"/>
     <link href="css/styles.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -36,7 +36,7 @@
         <div class="wrapper"><h1 class="logo">Mementogr.am</h1></div>
     </header>
 
-    <div role="main">
+    <div class="main">
         <div class="media-inner">
             <div class="media-photos"></div>
             <div class="media-info">
